--- a/pepeizqs deals web/Pages/Componentes/Interfaz/CajaNoticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/CajaNoticia.razor
@@ -20,7 +20,7 @@
 	<a href="/news/@noticia.Id/@Herramientas.EnlaceAdaptador.Nombre(titulo)/" style="cursor: pointer; text-decoration: none; color: var(--colorTexto);">
 		<div class="cnoticia-expandir" style="background-color: var(--fondoBotonPequeño); display: flex; align-items: center;" title="@titulo">
 			<div style="position: relative;">
-				<img src="@noticia.Imagen" style="width: 200px; height: 110px; object-fit: cover; opacity: 0.8;" />
+				<img src="@noticia.Imagen" style="width: 200px; height: 110px; object-fit: cover; opacity: 0.8;" alt="@titulo"/>
 
 				@{
 					string icono = string.Empty;
