--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -64,8 +64,10 @@ else
 								@ordenamientoElegido
 							</div>
 
-							<div>
-								<i class="fa-solid fa-caret-down"></i>
+							<div style="max-width: 9px;">
+								<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+									<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+								</svg>
 							</div>
 						</button>
 
@@ -98,7 +100,11 @@ else
 			{
 				<div style="background-color: var(--fondoMinimo); border: 1px solid var(--fondoBotonPequeño); padding: 20px; width: 100%; margin: 15px 0px 25px 0px; display: flex; flex-direction: column; gap: 30px;">
 					<div style="display: flex; align-items: center; gap: 20px;">
-						<i class="fa-solid fa-magnifying-glass" style="font-size: 20px;"></i>
+						<div style="max-width: 20px;">
+							<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+								<path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
+							</svg>
+						</div>
 
 						<input type="text" @onchange="(e => TextoCambiaBusqueda(e))" class="entrada-texto" style="flex: 1; min-width: 150px;" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "String9", "HistoricalLows")" />
 
@@ -124,11 +130,19 @@ else
 
 										@if (enseñarOcultar == false)
 										{
-											<i class="fa-solid fa-caret-down"></i>
+											<div style="max-width: 9px;">
+												<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+													<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+												</svg>
+											</div>
 										}
 										else
 										{
-											<i class="fa-solid fa-caret-up"></i>
+											<div style="max-width: 9px;">
+												<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+													<path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z" />
+												</svg>
+											</div>
 										}
 									</div>
 								</button>
@@ -140,11 +154,19 @@ else
 
 									@if (enseñarDescuentoMinimo == false)
 									{
-										<i class="fa-solid fa-caret-down"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+											</svg>
+										</div>
 									}
 									else
 									{
-										<i class="fa-solid fa-caret-up"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z" />
+											</svg>
+										</div>
 									}
 								</div>
 							</button>
@@ -155,11 +177,19 @@ else
 
 									@if (enseñarPrecioMaximo == false)
 									{
-										<i class="fa-solid fa-caret-down"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+											</svg>
+										</div>
 									}
 									else
 									{
-										<i class="fa-solid fa-caret-up"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z" />
+											</svg>
+										</div>
 									}
 								</div>
 							</button>
@@ -170,11 +200,19 @@ else
 
 									@if (enseñarDRMs == false)
 									{
-										<i class="fa-solid fa-caret-down"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+											</svg>
+										</div>
 									}
 									else
 									{
-										<i class="fa-solid fa-caret-up"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z" />
+											</svg>
+										</div>
 									}
 								</div>
 							</button>
@@ -185,11 +223,19 @@ else
 
 									@if (enseñarTiendas == false)
 									{
-										<i class="fa-solid fa-caret-down"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+											</svg>
+										</div>
 									}
 									else
 									{
-										<i class="fa-solid fa-caret-up"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z" />
+											</svg>
+										</div>
 									}
 								</div>
 							</button>
@@ -200,11 +246,19 @@ else
 
 									@if (enseñarCategorias == false)
 									{
-										<i class="fa-solid fa-caret-down"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+											</svg>
+										</div>
 									}
 									else
 									{
-										<i class="fa-solid fa-caret-up"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z" />
+											</svg>
+										</div>
 									}
 								</div>
 							</button>
@@ -215,11 +269,19 @@ else
 
 									@if (enseñarSteamDeck == false)
 									{
-										<i class="fa-solid fa-caret-down"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+											</svg>
+										</div>
 									}
 									else
 									{
-										<i class="fa-solid fa-caret-up"></i>
+										<div style="max-width: 9px;">
+											<svg class="svg-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+												<path d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z" />
+											</svg>
+										</div>
 									}
 								</div>
 							</button>
@@ -432,7 +494,7 @@ else
 			<div style="display: flex; flex-direction: column; gap: 25px; margin-top: -25px;">
 				<Virtualize Context="juego" Items="juegosMostrar" ItemSize="107">
 					<ItemContent>
-						<CajaJuego idioma="@idioma" juego="@juego" usuarioJuegosSteam="@juegosUsuarioSteam" usuarioJuegosGog="@juegosUsuarioGog" usuarioDeseadosSteam="@usuario?.SteamWishlist" usuarioDeseadosWeb="@usuario?.Wishlist" usuarioDeseadosGog="@usuario?.GogWishlist" tipo="CajaJuego.Tipo.MinimosHistoricos" usuarioPatreon="@usuarioPatreon" />
+						<CajaJuego idioma="@idioma" juego="@juego" juegosUsuario="@juegosUsuario" usuarioDeseadosSteam="@usuario?.SteamWishlist" usuarioDeseadosWeb="@usuario?.Wishlist" usuarioDeseadosGog="@usuario?.GogWishlist" tipo="CajaJuego.Tipo.MinimosHistoricos" usuarioPatreon="@usuarioPatreon" />
 					</ItemContent>
 				</Virtualize>
 			</div>
@@ -461,6 +523,7 @@ else
 
 	private Usuario usuario = new Usuario();
 	private bool usuarioPatreon = false;
+	private Herramientas.UsuarioListadosJuegos juegosUsuario = new Herramientas.UsuarioListadosJuegos();
 
 	private List<Juegos.Juego> juegosGestor = new List<Juegos.Juego>();
 	private List<Juegos.Juego> juegosMostrar = new List<Juegos.Juego>();
@@ -468,9 +531,6 @@ else
 	private string ordenamientoElegido = string.Empty;
 
 	private string textoBuscador { get; set; }
-
-	private List<string> juegosUsuarioSteam = new List<string>();
-	private List<string> juegosUsuarioGog = new List<string>();
 
 	private bool cargado = false;
 
@@ -480,17 +540,8 @@ else
 
 		if (usuario != null && usuarioLogeado == true)
 		{
-			if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-			{
-				juegosUsuarioSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-			}
-
-			if (string.IsNullOrEmpty(usuario.GogGames) == false)
-			{
-				juegosUsuarioGog = Herramientas.Listados.Generar(usuario.GogGames);
-			}
-
 			usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
+			juegosUsuario = Herramientas.UsuarioJuegos.Cargar(usuario);
 
 			#region Filtrado
 
@@ -805,11 +856,11 @@ else
 			{
 				if (ocultarJuegosUsuarioSteam == "checked" && juego.PrecioMinimosHistoricos[0].DRM == JuegoDRM.Steam)
 				{
-					if (juegosUsuarioSteam != null)
+					if (juegosUsuario.Steam != null)
 					{
-						if (juegosUsuarioSteam.Count > 0)
+						if (juegosUsuario.Steam.Count > 0)
 						{
-							foreach (var juegoUsuario in juegosUsuarioSteam)
+							foreach (var juegoUsuario in juegosUsuario.Steam)
 							{
 								if (juego.IdSteam.ToString() == juegoUsuario)
 								{
@@ -826,11 +877,11 @@ else
 			{
 				if (ocultarJuegosUsuarioGog == "checked" && juego.PrecioMinimosHistoricos[0].DRM == JuegoDRM.GOG)
 				{
-					if (juegosUsuarioGog != null)
+					if (juegosUsuario.Gog != null)
 					{
-						if (juegosUsuarioGog.Count > 0)
+						if (juegosUsuario.Gog.Count > 0)
 						{
-							foreach (var juegoUsuario in juegosUsuarioGog)
+							foreach (var juegoUsuario in juegosUsuario.Gog)
 							{
 								if (juego.IdGog.ToString() == juegoUsuario)
 								{
