--- a/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
@@ -82,7 +82,13 @@
             }
 
             <div style="margin-top: 20px; width: 5%;">
-                <button @onclick="@(e => AñadirTier(e))" class="boton-pequeño" style="text-align: center;"><i class="fa-solid fa-plus"></i></button>
+                <button @onclick="@(e => AñadirTier(e))" class="boton-pequeño" style="text-align: center; display: flex; justify-content: center;">
+                    <div style="max-width: 20px;">
+                        <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z" />
+                        </svg>
+                    </div>
+                </button>
             </div>
         </div>
     </div>
