--- a/pepeizqs deals web/Pages/Componentes/Secciones/Contacto.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Contacto.razor
@@ -6,8 +6,10 @@
 
 	<div style="display: flex; flex-direction: column; gap: 40px;">
 		<div style="display: flex; align-items: center; gap: 20px; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 20px;">
-			<div>
-				<i class="fa-solid fa-circle-info" style="font-size: 25px;"></i>
+			<div style="max-width: 26px;">
+				<svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+					<path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
+				</svg>
 			</div>
 			<div>
 				@Herramientas.Idiomas.BuscarTexto(idioma, "String1", "Contact") @string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String2", "Contact"), "admin@pepeizqdeals.com")
@@ -35,6 +37,12 @@
 				<button class="boton" @onclick="EnviarmeCorreo" style="margin-top: 20px;">
 					@Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Contact")
 				</button>
+			}
+			else
+			{
+				<div class="boton" style="opacity: 0.5; margin-top: 20px;">
+					@Herramientas.Idiomas.BuscarTexto(idioma, "String6", "Contact")
+				</div>
 			}
 
 			@if (formularioEnviado == true)
